# Sanitar-Simulator

./: CMakeLists.txt  Object.cpp  Object.h  Player.cpp  Player.h  UI.cpp  UI.h  main.cpp  map.json
head/: Object.cpp  Object.h  Player.cpp  Player.h  Sick.cpp  Sick.h  UI.cpp  UI.h
